# TornScripts

./: pyproject.toml
.github/workflows/: lint.yml
scripts/: improvedBetterChat.js  improvedCrimeChainCalculator.js  improvedCrimeCrackHelper.js  improvedEggFinder.js  improvedPickpocketingColors.js  improvedPokerOddsCalculator.js  improvedTornAttackStats.js  improvedTornSetCalculator.js
