[tool.poetry]
name = "tornscripts"
version = "0.1.0"
description = "A collection of Torn scripts"
authors = ["Dustin Spencer"]
license = "MIT"

# Specify Python version compatibility
[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
ruff = "^0.6.6"

# Configure Ruff linting and formatting settings
[tool.ruff]
line-length = 88  # Maximum line length for formatting
target-version = "py311"  # Target Python version for Ruff
fix = true  # Automatically apply formatting fixes

[tool.ruff.lint]
select = ["E", "F", "W"]  # Example: Enable error, formatting, and warning checks
ignore = ["E501"]  # Example: Ignore line length rule (E501)

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
